syntax = "proto3";

package agent.v1;

option go_package = "github.com/wealth-copilot/wealth-copilot-go/proto/agent/v1;agentv1";

// AgentService: Go calls Python
service AgentService {
  // Streaming chat with AI agent
  rpc Chat(ChatRequest) returns (stream ChatResponse);

  // Research analysis for a stock
  rpc AnalyzeStock(AnalyzeStockRequest) returns (AnalyzeStockResponse);

  // Goal rebalancing recommendation
  rpc RebalanceRecommendation(RebalanceRequest) returns (RebalanceResponse);
}

// CallbackService: Python calls Go
service CallbackService {
  rpc GetMarketData(MarketDataRequest) returns (MarketDataResponse);
  rpc GetPortfolio(PortfolioRequest) returns (PortfolioResponse);
  rpc ExecuteTrade(TradeRequest) returns (TradeResponse);
  rpc ValidateRisk(RiskValidationRequest) returns (RiskValidationResponse);
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}

// ============================================================================
// AgentService messages
// ============================================================================

message ChatRequest {
  string user_id = 1;
  string message = 2;
  string conversation_id = 3;
}

message ChatResponse {
  string content = 1;
  bool is_final = 2;
  string tool_call = 3; // optional: tool being used
}

message AnalyzeStockRequest {
  string symbol = 1;
  string exchange = 2;
  string user_id = 3;
}

message AnalyzeStockResponse {
  double score = 1;
  string recommendation = 2;
  string analysis = 3;
  repeated string bull_signals = 4;
  repeated string bear_signals = 5;
}

message RebalanceRequest {
  string goal_id = 1;
  string user_id = 2;
}

message RebalanceResponse {
  repeated TradeSignal signals = 1;
  string rationale = 2;
}

message TradeSignal {
  string action = 1; // BUY, SELL
  string symbol = 2;
  string exchange = 3;
  int32 quantity = 4;
  double price = 5;
  string reason = 6;
}

// ============================================================================
// CallbackService messages
// ============================================================================

message MarketDataRequest {
  string symbol = 1;
  string exchange = 2;
  repeated string fields = 3; // price, fundamentals, technicals
}

message MarketDataResponse {
  double current_price = 1;
  double pe_ratio = 2;
  double rsi = 3;
  string trend = 4;
  string raw_json = 5; // full data as JSON
}

message PortfolioRequest {
  string user_id = 1;
}

message PortfolioResponse {
  double total_value = 1;
  double cash = 2;
  repeated PositionProto positions = 3;
}

message PositionProto {
  string symbol = 1;
  int32 quantity = 2;
  double avg_price = 3;
  double current_price = 4;
  double pnl = 5;
}

message TradeRequest {
  string user_id = 1;
  string action = 2;
  string symbol = 3;
  string exchange = 4;
  int32 quantity = 5;
  string order_type = 6;
  double price = 7;
}

message TradeResponse {
  string order_id = 1;
  string status = 2;
  double executed_price = 3;
  string error = 4;
}

message RiskValidationRequest {
  string user_id = 1;
  string symbol = 2;
  double entry_price = 3;
  int32 quantity = 4;
  double stop_loss = 5;
  double target = 6;
  double score = 7;
}

message RiskValidationResponse {
  bool approved = 1;
  repeated string violations = 2;
  repeated string warnings = 3;
  int32 adjusted_quantity = 4;
}

message NotificationRequest {
  string user_id = 1;
  string message = 2;
  string channel = 3; // push, email, slack
}

message NotificationResponse {
  bool sent = 1;
}
